@@ -1,3 +1,12 @@
+Next release
+------------
+
+Bug Fixes
+~~~~~~~~~
+
+- Fix PATH_INFO encoding/decoding on Python 3 (as per PEP 333, tunnel
+  bytes-in-unicode-as-latin-1-after-unquoting).
+
 0.4 (2012-01-02)
 ----------------
 
